--- a/TODO.txt
+++ b/TODO.txt
@@ -123,6 +123,7 @@ X dude's aiming arms are rendering behind his body
 X inventory item gets stuck to cursor if dude dies while you're holding it
 X first explosion causes game to pause
 X sky does not reset after new game
+X dude's aim arm stays on screen after new game
 clear rubber hose cursor better
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
@@ -132,8 +133,8 @@ walking into car at angle against a building dude is pushed inside building
 shouldn't be able to move around after time elapses
 sometimes can't reverse after running into something
 dead zombies rendered on top of minivan
-dude's aim arm stays on screen after new game
 items in hand stay after new game
+dude's aiming arm stays after dude dies
 
 *EDITOR*
 X remove current collidible code
