--- a/TODO.txt
+++ b/TODO.txt
@@ -85,6 +85,7 @@ X make cars created on parking spots turn to fit in the spot
 X show low fuel light like the check engine light
 X retry button
 X show building inventory when inside house
+X make headlights less prone to damage
 add drag to car
 tune Honda's performance
 HUD ammo count
