--- a/TODO.txt
+++ b/TODO.txt
@@ -126,6 +126,8 @@ X first explosion causes game to pause
 X sky does not reset after new game
 X dude's aim arm stays on screen after new game
 X items in hand stay after new game
+X dead zombies rendered on top of minivan
+X sometimes can't reverse after running into something
 clear rubber hose cursor better
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
@@ -133,8 +135,6 @@ If run into gas pump when map is scrolling and keep holding move key down, the g
 Sometimes the siphon goes in the wrong direction
 walking into car at angle against a building dude is pushed inside building
 shouldn't be able to move around after time elapses
-sometimes can't reverse after running into something
-dead zombies rendered on top of minivan
 dude's aiming arm stays after dude dies
 
 *EDITOR*
