--- a/TODO.txt
+++ b/TODO.txt
@@ -87,6 +87,7 @@ X retry button
 X show building inventory when inside house
 X make headlights less prone to damage
 X remove one curve from S curves
+X nuclear blast after time elapses
 add drag to car
 tune Honda's performance
 HUD ammo count
@@ -102,7 +103,6 @@ intro screen
 cheat sheet
 keep track of statistics
 add dead ends
-nuclear blast after time elapses
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
