--- a/TODO.txt
+++ b/TODO.txt
@@ -103,6 +103,7 @@ intro screen
 cheat sheet
 keep track of statistics
 add dead ends
+make headlights automatically turn on
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
