--- a/TODO.txt
+++ b/TODO.txt
@@ -89,13 +89,14 @@ X make headlights less prone to damage
 X remove one curve from S curves
 X nuclear blast after time elapses
 X firearm between shot timeout
+X make headlights automatically turn on
+X firearm reload times
 add drag to car
 tune Honda's performance
 HUD ammo count
 headlight repair
 car repair
 make zombies attracted to light
-firearm reload times
 add inventory/hud toggle button
 support CMD-click on inventory as left-click
 some cars can take more damage than other
@@ -103,7 +104,6 @@ intro screen
 cheat sheet
 keep track of statistics
 add dead ends
-make headlights automatically turn on
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
