--- a/TODO.txt
+++ b/TODO.txt
@@ -131,13 +131,17 @@ X dead zombies rendered on top of minivan
 X sometimes can't reverse after running into something
 X clear rubber hose cursor better
 X Sometimes the siphon goes in the wrong direction
+X shouldn't be able to move around after time elapses
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 walking into car at angle against a building dude is pushed inside building
-shouldn't be able to move around after time elapses
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
+explosion is rendered under barrels
+explosion cause dude to bleed even though he takes no damage
+dude gets kicked out of car when colliding zombies
+night sky doesn't get reset on new game
 
 *EDITOR*
 X remove current collidible code
