--- a/TODO.txt
+++ b/TODO.txt
@@ -132,6 +132,7 @@ X sometimes can't reverse after running into something
 X clear rubber hose cursor better
 X Sometimes the siphon goes in the wrong direction
 X shouldn't be able to move around after time elapses
+X dude gets kicked out of car when colliding zombies
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -140,7 +141,6 @@ dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 explosion is rendered under barrels
 explosion cause dude to bleed even though he takes no damage
-dude gets kicked out of car when colliding zombies
 night sky doesn't get reset on new game
 
 *EDITOR*
