--- a/TODO.txt
+++ b/TODO.txt
@@ -137,13 +137,13 @@ X dude gets kicked out of car when colliding zombies
 X night sky doesn't get reset on new game
 X explosion causes dude to bleed even though he takes no damage
 X explosion is rendered under barrels
+X empty gas not blinking
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 walking into car at angle against a building dude is pushed inside building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
-empty gas not blinking
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
 
 *EDITOR*
