--- a/TODO.txt
+++ b/TODO.txt
@@ -92,6 +92,7 @@ X firearm between shot timeout
 X make headlights automatically turn on
 X firearm reload times
 X cheat sheet
+X each section has a different % chance appearing
 add drag to car
 tune Honda's performance
 HUD ammo count
@@ -104,7 +105,6 @@ some cars can take more damage than other
 intro screen
 keep track of statistics
 add dead ends
-each section has a different % chance appearing
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
@@ -145,6 +145,8 @@ walking into car at angle against a building dude is pushed inside building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
+sometimes cars get stuck between two positions
+smoke sometimes has a weird flicking thing -- same as what was happening with dude before (ghost)
 
 *EDITOR*
 X remove current collidible code
