--- a/TODO.txt
+++ b/TODO.txt
@@ -138,6 +138,7 @@ X night sky doesn't get reset on new game
 X explosion causes dude to bleed even though he takes no damage
 X explosion is rendered under barrels
 X empty gas not blinking
+X sometimes cars get stuck between two positions
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -145,7 +146,6 @@ walking into car at angle against a building dude is pushed inside building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
-sometimes cars get stuck between two positions
 smoke sometimes has a weird flicking thing -- same as what was happening with dude before (ghost)
 
 *EDITOR*
