--- a/TODO.txt
+++ b/TODO.txt
@@ -151,6 +151,8 @@ sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
 smoke sometimes has a weird flicking thing -- same as what was happening with dude before (ghost)
 if car is not in view when exploding it should not make a sound
+hit sound fires when walking into car at an angle
+arm doesn't flash when dude is hit
 
 *EDITOR*
 X remove current collidible code
