--- a/TODO.txt
+++ b/TODO.txt
@@ -142,14 +142,14 @@ X explosion causes dude to bleed even though he takes no damage
 X explosion is rendered under barrels
 X empty gas not blinking
 X sometimes cars get stuck between two positions
+X walking into car at angle against a building dude is pushed inside building
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
-walking into car at angle against a building dude is pushed inside building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
-smoke sometimes has a weird flicking thing -- same as what was happening with dude before (ghost)
+smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
 if car is not in view when exploding it should not make a sound
 hit sound fires when walking into car at an angle
 arm doesn't flash when dude is hit
