--- a/TODO.txt
+++ b/TODO.txt
@@ -143,6 +143,7 @@ X explosion is rendered under barrels
 X empty gas not blinking
 X sometimes cars get stuck between two positions
 X walking into car at angle against a building dude is pushed inside building
+X dude now overlaps too much on 'stationary' collisions
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -156,7 +157,6 @@ arm doesn't flash when dude is hit
 there's a rogue pixel on dude's death animation
 occasionally the farmhouse allows zombies and dude to vorp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
-dude now overlaps too much on 'stationary' collisions
 
 
 *EDITOR*
