--- a/TODO.txt
+++ b/TODO.txt
@@ -144,6 +144,7 @@ X empty gas not blinking
 X sometimes cars get stuck between two positions
 X walking into car at angle against a building dude is pushed inside building
 X dude now overlaps too much on 'stationary' collisions
+X there's a rogue pixel on dude's death animation
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -154,7 +155,6 @@ smoke sometimes has a weird flicking thing in safari-- same as what was happenin
 if car is not in view when exploding it should not make a sound
 hit sound fires when walking into car at an angle
 arm doesn't flash when dude is hit
-there's a rogue pixel on dude's death animation
 occasionally the farmhouse allows zombies and dude to vorp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 
