--- a/TODO.txt
+++ b/TODO.txt
@@ -110,6 +110,7 @@ intro screen
 add dead ends
 display statistics
 add about page
+zombie audio
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
@@ -160,6 +161,8 @@ hit sound fires when walking into car at an angle
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vorp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
+shouldn't show intro on saved games
+car inventory hints don't move with car
 
 *EDITOR*
 X remove current collidible code
