--- a/TODO.txt
+++ b/TODO.txt
@@ -149,6 +149,7 @@ X walking into car at angle against a building dude is pushed inside building
 X dude now overlaps too much on 'stationary' collisions
 X there's a rogue pixel on dude's death animation
 X zombies on the chase shouldn't slow down after you go into a building
+X if car is not in view when exploding it should not make a sound
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -156,7 +157,6 @@ dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
 smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
-if car is not in view when exploding it should not make a sound
 hit sound fires when walking into car at an angle
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vorp through from the left or bottom sides
