--- a/TODO.txt
+++ b/TODO.txt
@@ -151,6 +151,7 @@ X dude now overlaps too much on 'stationary' collisions
 X there's a rogue pixel on dude's death animation
 X zombies on the chase shouldn't slow down after you go into a building
 X if car is not in view when exploding it should not make a sound
+X shouldn't show intro on saved games
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -162,7 +163,6 @@ hit sound fires when walking into car at an angle
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vorp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
-shouldn't show intro on saved games
 car inventory hints don't move with car
 
 *EDITOR*
