use Modernizr to figure out transform prefix

--- a/TODO.txt
+++ b/TODO.txt
@@ -99,6 +99,7 @@ X some cars can take more damage than other
 X switch to use http://soundjs.com/
 X tune Honda's performance
 X add drag to car
+X use Modernizr to detect if the browser can play the game or not
 HUD ammo count
 headlight repair
 car repair
@@ -111,7 +112,6 @@ add dead ends
 display statistics
 add about page
 zombie audio
-use Modernizr to detect if the browser can play the game or not
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
