--- a/TODO.txt
+++ b/TODO.txt
@@ -164,6 +164,7 @@ arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
+hitting return quickly enough can break menu screens
 
 *EDITOR*
 X remove current collidible code
