--- a/TODO.txt
+++ b/TODO.txt
@@ -153,6 +153,7 @@ X zombies on the chase shouldn't slow down after you go into a building
 X if car is not in view when exploding it should not make a sound
 X shouldn't show intro on saved games
 X hitting return quickly enough can break menu screens
+X gradients not working in FF
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -165,6 +166,7 @@ arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
+dude's aiming arm rendered wrong in FF
 
 *EDITOR*
 X remove current collidible code
