check for mp3 support before using

--- a/TODO.txt
+++ b/TODO.txt
@@ -155,6 +155,7 @@ X shouldn't show intro on saved games
 X hitting return quickly enough can break menu screens
 X gradients not working in FF
 X dude's aiming arm rendered wrong in FF
+X Audio not working in FF -- doesn't support mp3
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
