--- a/TODO.txt
+++ b/TODO.txt
@@ -156,6 +156,7 @@ X hitting return quickly enough can break menu screens
 X gradients not working in FF
 X dude's aiming arm rendered wrong in FF
 X Audio not working in FF -- doesn't support mp3
+X smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
@@ -167,7 +168,6 @@ arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
-smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
 
 *EDITOR*
 X remove current collidible code
