--- a/TODO.txt
+++ b/TODO.txt
@@ -157,7 +157,7 @@ X gradients not working in FF
 X dude's aiming arm rendered wrong in FF
 X Audio not working in FF -- doesn't support mp3
 X smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
-fix sideways gas pumps collision bounds
+X fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 dude's aiming arm stays after dude dies
