--- a/TODO.txt
+++ b/TODO.txt
@@ -159,8 +159,8 @@ X dude's aiming arm rendered wrong in FF
 X Audio not working in FF -- doesn't support mp3
 X smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
 X fix sideways gas pumps collision bounds
+X If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 can't hold drag an item then drop it into another car/building
-If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
@@ -169,6 +169,7 @@ arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
+cars show up on top of buildings
 
 *EDITOR*
 X remove current collidible code
