--- a/TODO.txt
+++ b/TODO.txt
@@ -164,13 +164,12 @@ can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
-hit sound fires when walking into car at an angle
+hit sound sometimes fires when walking into car at an angle
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
 cars show up on top of buildings
-resume game doesn't show up on main menu after 2nd game has started
 
 *EDITOR*
 X remove current collidible code
@@ -262,3 +261,4 @@ make mapworker work when WebWorkers aren't supported
 try using dirty regions for sky
 stagger the two section loads when shifting the level
 save sound config in a cookie
+debris
