fixed blood splatter
removed z-index on background tiles

--- a/TODO.txt
+++ b/TODO.txt
@@ -164,6 +164,7 @@ X Audio not working in FF -- doesn't support mp3
 X smoke sometimes has a weird flicking thing in safari-- same as what was happening with dude before (ghost)
 X fix sideways gas pumps collision bounds
 X If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
+X blood isn't showing up anymore
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
@@ -174,7 +175,6 @@ occasionally the farmhouse allows zombies and dude to vworp through from the lef
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
 cars show up on top of buildings
-blood isn't showing up anymore
 no cop cars at police station
 
 *EDITOR*
