--- a/TODO.txt
+++ b/TODO.txt
@@ -165,6 +165,7 @@ X smoke sometimes has a weird flicking thing in safari-- same as what was happen
 X fix sideways gas pumps collision bounds
 X If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 X blood isn't showing up anymore
+X no cop cars at police station
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
@@ -175,7 +176,6 @@ occasionally the farmhouse allows zombies and dude to vworp through from the lef
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
 cars show up on top of buildings
-no cop cars at police station
 
 *EDITOR*
 X remove current collidible code
