--- a/TODO.txt
+++ b/TODO.txt
@@ -169,6 +169,7 @@ X If run into gas pump when map is scrolling and keep holding move key down, the
 X blood isn't showing up anymore
 X no cop cars at police station
 X stop dragging when mouse leaves play area
+X cars show up on top of buildings
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
@@ -178,8 +179,9 @@ arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
-cars show up on top of buildings
 car menu sticks around after creating a new game
+pressing pause at the moment dude dies you get both game over and pause screen
+click dropping item fires your weapon
 
 *EDITOR*
 X remove current collidible code
