--- a/TODO.txt
+++ b/TODO.txt
@@ -171,6 +171,7 @@ X no cop cars at police station
 X stop dragging when mouse leaves play area
 X cars show up on top of buildings
 X click dropping item fires your weapon
+X distance not taking dude's start position into account
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
