--- a/TODO.txt
+++ b/TODO.txt
@@ -172,6 +172,7 @@ X stop dragging when mouse leaves play area
 X cars show up on top of buildings
 X click dropping item fires your weapon
 X distance not taking dude's start position into account
+X audio doesn't clear correctly for new game
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
@@ -183,7 +184,6 @@ zombies and dude bounce over and over slightly when they walk into some cars
 car inventory hints don't move with car
 car menu sticks around after creating a new game
 pressing pause at the moment dude dies you get both game over and pause screen
-audio doesn't clear correctly for new game
 
 *EDITOR*
 X remove current collidible code
