--- a/TODO.txt
+++ b/TODO.txt
@@ -174,6 +174,7 @@ X click dropping item fires your weapon
 X distance not taking dude's start position into account
 X audio doesn't clear correctly for new game
 X hit sound sometimes fires when walking into car at an angle
+X car inventory hints don't move with car
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 sometimes inventory images get selected as text
@@ -181,7 +182,6 @@ pause in rendering any sky related thing for the first time (headlights, muzzle 
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
-car inventory hints don't move with car
 car menu sticks around after creating a new game
 pressing pause at the moment dude dies you get both game over and pause screen
 
