--- a/TODO.txt
+++ b/TODO.txt
@@ -177,6 +177,7 @@ X hit sound sometimes fires when walking into car at an angle
 X car inventory hints don't move with car
 X sometimes inventory images get selected as text
 X sprites are rendered above sky
+X nuke appears under sprites
 can't hold drag an item then drop it into another car/building
 dude's aiming arm stays after dude dies
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
@@ -185,7 +186,7 @@ occasionally the farmhouse allows zombies and dude to vworp through from the lef
 zombies and dude bounce over and over slightly when they walk into some cars
 car menu sticks around after creating a new game
 pressing pause at the moment dude dies you get both game over and pause screen
-nuke appears under sprites
+nuke is no longer positioned correctly
 
 *EDITOR*
 X remove current collidible code
