--- a/TODO.txt
+++ b/TODO.txt
@@ -179,8 +179,8 @@ X sometimes inventory images get selected as text
 X sprites are rendered above sky
 X nuke appears under sprites
 X nuke is no longer positioned correctly
+X dude's aiming arm stays after dude dies
 can't hold drag an item then drop it into another car/building
-dude's aiming arm stays after dude dies
 pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
