--- a/TODO.txt
+++ b/TODO.txt
@@ -180,8 +180,8 @@ X sprites are rendered above sky
 X nuke appears under sprites
 X nuke is no longer positioned correctly
 X dude's aiming arm stays after dude dies
+X pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
 can't hold drag an item then drop it into another car/building
-pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
