--- a/TODO.txt
+++ b/TODO.txt
@@ -183,6 +183,7 @@ X nuke appears under sprites
 X nuke is no longer positioned correctly
 X dude's aiming arm stays after dude dies
 X pause in rendering any sky related thing for the first time (headlights, muzzle flash, etc)
+X win pinwheel still shows for new game after win
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -195,7 +196,6 @@ sedan and police car steering is a bit sensitive
 can't click through gas tips to fuel cars underneith
 inventory drop on other inventory is offset oddly
 after win showed -X Miles to Go
-win pinwheel still shows for new game after win
 
 *EDITOR*
 X remove current collidible code
