--- a/TODO.txt
+++ b/TODO.txt
@@ -186,6 +186,7 @@ X pause in rendering any sky related thing for the first time (headlights, muzzl
 X win pinwheel still shows for new game after win
 X after win showed -X Miles to Go
 X can't click through gas tips to fuel cars underneith
+X sedan and police car steering is a bit sensitive
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -194,9 +195,9 @@ car menu sticks around after creating a new game
 pressing pause at the moment dude dies you get both game over and pause screen
 getting context menus when trying to right-click on inventory (shotgun)
 when dude enters car when it's dark he leaves a silhouette
-sedan and police car steering is a bit sensitive
 inventory drop on other inventory is offset oddly
 dude/zombies are rendered under blood in FF
+can't see car glow at night
 
 *EDITOR*
 X remove current collidible code
