--- a/TODO.txt
+++ b/TODO.txt
@@ -187,6 +187,7 @@ X win pinwheel still shows for new game after win
 X after win showed -X Miles to Go
 X can't click through gas tips to fuel cars underneith
 X sedan and police car steering is a bit sensitive
+X game over screen shows on about page
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
