--- a/TODO.txt
+++ b/TODO.txt
@@ -201,6 +201,9 @@ dude/zombies are rendered under blood in FF
 can't see car glow at night
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
+inventory obscures car for fueling
+game freezes in Chrome after a while (localStorage runs out?)
+sometimes breaking turns into reverse
 
 *EDITOR*
 X remove current collidible code
