--- a/TODO.txt
+++ b/TODO.txt
@@ -188,6 +188,7 @@ X after win showed -X Miles to Go
 X can't click through gas tips to fuel cars underneith
 X sedan and police car steering is a bit sensitive
 X game over screen shows on about page
+X inventory obscures car for fueling
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -201,7 +202,6 @@ dude/zombies are rendered under blood in FF
 can't see car glow at night
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
-inventory obscures car for fueling
 game freezes in Chrome after a while (localStorage runs out?)
 sometimes breaking turns into reverse
 
