--- a/TODO.txt
+++ b/TODO.txt
@@ -190,6 +190,7 @@ X sedan and police car steering is a bit sensitive
 X game over screen shows on about page
 X inventory obscures car for fueling
 X sprites are rendered on top of sky in Chrome
+X dude/zombies are rendered under blood in FF/Chrome
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -199,7 +200,6 @@ pressing pause at the moment dude dies you get both game over and pause screen
 getting context menus when trying to right-click on inventory (shotgun)
 when dude enters car when it's dark he leaves a silhouette
 inventory drop on other inventory is offset oddly
-dude/zombies are rendered under blood in FF/Chrome
 can't see car glow at night
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
