--- a/TODO.txt
+++ b/TODO.txt
@@ -191,6 +191,8 @@ X game over screen shows on about page
 X inventory obscures car for fueling
 X sprites are rendered on top of sky in Chrome
 X dude/zombies are rendered under blood in FF/Chrome
+X Chrome has some audio warnings
+X Chrome doesn't shoot after a couple of shots
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -206,8 +208,6 @@ cars can be generated overlapping
 game freezes in Chrome after a while (localStorage runs out?)
 sometimes breaking turns into reverse
 crossroads gas station is really slow in Chrome
-Chrome has some audio warnings
-Chrome doesn't shoot after a couple of shots
 
 *EDITOR*
 X remove current collidible code
