--- a/TODO.txt
+++ b/TODO.txt
@@ -193,6 +193,7 @@ X sprites are rendered on top of sky in Chrome
 X dude/zombies are rendered under blood in FF/Chrome
 X Chrome has some audio warnings
 X Chrome doesn't shoot after a couple of shots
+X sometimes breaking turns into reverse
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -205,7 +206,6 @@ inventory drop on other inventory is offset oddly
 can't see car glow at night
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
-sometimes breaking turns into reverse
 crossroads gas station is really slow in Chrome
 
 *EDITOR*
