--- a/TODO.txt
+++ b/TODO.txt
@@ -194,6 +194,8 @@ X dude/zombies are rendered under blood in FF/Chrome
 X Chrome has some audio warnings
 X Chrome doesn't shoot after a couple of shots
 X sometimes breaking turns into reverse
+X can't see car glow at night
+X sky obscures hints
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -203,7 +205,6 @@ pressing pause at the moment dude dies you get both game over and pause screen
 getting context menus when trying to right-click on inventory (shotgun)
 when dude enters car when it's dark he leaves a silhouette
 inventory drop on other inventory is offset oddly
-can't see car glow at night
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
 crossroads gas station is really slow in Chrome
