--- a/TODO.txt
+++ b/TODO.txt
@@ -196,6 +196,7 @@ X Chrome doesn't shoot after a couple of shots
 X sometimes breaking turns into reverse
 X can't see car glow at night
 X sky obscures hints
+X inventory drop on other inventory is offset oddly
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -204,7 +205,6 @@ car menu sticks around after creating a new game
 pressing pause at the moment dude dies you get both game over and pause screen
 getting context menus when trying to right-click on inventory (shotgun)
 when dude enters car when it's dark he leaves a silhouette
-inventory drop on other inventory is offset oddly
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
 
@@ -316,8 +316,6 @@ X Make driving at speed sound less headache inducing and shorter
 X Replace Glock fire
 X Remove 2nd Zombie attack sound
   Replace Glock/Rifle reload
-  Zombie hit
-  Zombie die
 
 Bugs:
   inventory drop on other inventory is offset oddly
