--- a/TODO.txt
+++ b/TODO.txt
@@ -197,6 +197,7 @@ X sometimes breaking turns into reverse
 X can't see car glow at night
 X sky obscures hints
 X inventory drop on other inventory is offset oddly
+X highlighted car shows above hints
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
