--- a/TODO.txt
+++ b/TODO.txt
@@ -198,6 +198,7 @@ X can't see car glow at night
 X sky obscures hints
 X inventory drop on other inventory is offset oddly
 X highlighted car shows above hints
+X time trial does not resume on reload
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
