--- a/TODO.txt
+++ b/TODO.txt
@@ -199,6 +199,7 @@ X sky obscures hints
 X inventory drop on other inventory is offset oddly
 X highlighted car shows above hints
 X time trial does not resume on reload
+X on 2nd game after death, old held bat still fires when hit space
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -209,6 +210,7 @@ getting context menus when trying to right-click on inventory (shotgun)
 when dude enters car when it's dark he leaves a silhouette
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
+can't always hit cars with bat
 
 *EDITOR*
 X remove current collidible code
