--- a/TODO.txt
+++ b/TODO.txt
@@ -200,6 +200,7 @@ X inventory drop on other inventory is offset oddly
 X highlighted car shows above hints
 X time trial does not resume on reload
 X on 2nd game after death, old held bat still fires when hit space
+X reload non-time trial game shows "remaining" instead of time
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -211,7 +212,6 @@ when dude enters car when it's dark he leaves a silhouette
 engine noise should stop when car runs out of fuel
 cars can be generated overlapping
 can't always hit cars with bat
-reload non-time trial game shows "remaining" instead of time
 
 *EDITOR*
 X remove current collidible code
