--- a/TODO.txt
+++ b/TODO.txt
@@ -201,6 +201,7 @@ X highlighted car shows above hints
 X time trial does not resume on reload
 X on 2nd game after death, old held bat still fires when hit space
 X reload non-time trial game shows "remaining" instead of time
+X 2nd game map tiles not rendered correctly
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -213,7 +214,6 @@ engine noise should stop when car runs out of fuel
 cars can be generated overlapping
 can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
-dude appears in center of car after reload while driving then exit
 
 *EDITOR*
 X remove current collidible code
