--- a/TODO.txt
+++ b/TODO.txt
@@ -214,6 +214,7 @@ engine noise should stop when car runs out of fuel
 cars can be generated overlapping
 can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
+Highlighted car z-index didn't go back to normal after siphoned car dried up
 
 *EDITOR*
 X remove current collidible code
